# IntelligentVisionZeroing

./: CMakeLists.txt  Technical Requirements.txt  app.js  config.json  index.html  main.cpp
.github/workflows/: build.yml
